style.css
/* ... */
@media only screen and (max-width: 767px) {
  .card-deck {
    display: block !important;
  }
  .card {
    margin-bottom: 30px !important;
  }
  .footer-section .container .row .col-lg-5 {
    padding-top: 5px;
    padding-left: 15px;
  }
  .footer-section .container .row .col-lg-3 {
    padding-left: 15px;
  }
  .footer-list-item ul {
    margin-bottom: 20px;
  }
}
@media only screen and (max-width: 575px) {
  .header-details h1 {
    font-size: 44px;
    line-height: 65px;
    margin-bottom: 15px;
  }
  .footer-list-item ul li {
    font-size: 14px;
    line-height: 26px;
  }
}

@media only screen and (max-width: 454px) {
  .social-icons li {
    height: 45px;
    width: 45px;
    margin: 5px;
  }
  .social-icons li a {
    line-height: 45px;
    font-size: 25px;
  }
  .social-icons li.shadow a {
    height: 30px;
    width: 30px;
    line-height: 30px;
    font-size: 22px;
  }
  .nav-btn {
    width: 32%;
    height: 15%;
    margin-bottom: 7px;
    text-align: left;
  }
}

@media only screen and (max-width: 364px) {
  .social-icons li {
    height: 40px;
    width: 40px;
    margin: 3px;
  }
  .social-icons li a {
    line-height: 40px;
    font-size: 20px;
  }
  .social-icons li.shadow a {
    height: 25px;
    width: 25px;
    line-height: 25px;
    font-size: 20px;
  }
  .nav-btn {
    padding: 10px 28px !important;
    background-color: #21b573;
    color: #ffffff !important;
    border: none;
    border-radius: 33px;
  }

  .nav-btn {
    background-position: center;
    transition: background 0.8s;
  }
  .nav-btn:hover {
    background: #1d9660 radial-gradient(circle, transparent 1%, #1d9660 1%)
      center/15000%;
  }
  .nav-link:hover {
    transform: scale(1.05);
    transition: 0.5s all ease-in-out;
    font-size: 17.5px;
  }
}

/*Back to top button */
.gotopbtn {
  position: fixed;
  width: 50px;
  height: 50px;
  background: #27ae60;
  bottom: 40px;
  right: 50px;
  text-decoration: none;
  text-align: center;
  line-height: 50px;
  color: white;
  font-size: 22px;
  border-radius: 50%;
}
.gotopbtn {
  background-position: center;
  transition: background 0.8s;
}
.gotopbtn:hover {
  background: #1d9660 radial-gradient(circle, transparent 1%, #1d9660 1%)
    center/15000%;
}
.gotopbtn:active {
  background-color: white;
  background-size: 100%;
  transition: background 0s;
}

.fas {
  text-decoration: none;
  color: white;
}
.fas:hover {
  color: white;
}

/*Testimotial*/
.col-center {
  margin: 0 auto;
  float: none !important;
}
.carousel {
  margin: 50px auto;
  padding: 0 70px;
}
.carousel-item {
  color: #282531;
  font-size: 14px;
  text-align: center;
  overflow: hidden;
  min-height: 290px;
}
.carousel .item .img-box {
  width: 135px;
  height: 135px;
  margin: 0 auto;
  padding: 5px;
  border: 1px solid #ddd;
  border-radius: 50%;
}
.carousel .img-box img {
  width: 100%;
  height: 100%;
  display: block;
  border-radius: 50%;
}
.carousel .testimonial {
  padding: 30px 0 10px;
}
.carousel .overview {
  font-style: italic;
}
.carousel .overview b {
  text-transform: uppercase;
  color: #21b573;
}
.carousel .carousel-control {
  width: 40px;
  height: 40px;
  margin-top: -20px;
  top: 50%;
  background: none;
}
.carousel-control i {
  font-size: 68px;
  line-height: 42px;
  position: absolute;
  display: inline-block;
  color: rgba(0, 0, 0, 0.8);
  text-shadow: 0 3px 3px #e6e6e6, 0 0 0 #000;
}
.carousel .carousel-indicators {
  bottom: -40px;
}
.carousel-indicators li,
.carousel-indicators li.active {
  width: 10px;
  height: 10px;
  margin: 1px 3px;
  border-radius: 50%;
}
.carousel-indicators li {
  background: #999;
  border-color: transparent;
  box-shadow: inset 0 2px 1px rgba(0, 0, 0, 0.2);
}
.carousel-indicators li.active {
  background: rgb(122, 120, 120);
  box-shadow: inset 0 2px 1px rgba(0, 0, 0, 0.2);
}

